testsuite/tests/checks/unconstrained_arrays/test.out
arrays.ads:5:18: error: unconstrained array definition
5 |    type U_Arr is array (Idx range <>) of Integer;   --  FLAG
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

